--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,40 @@
 services:
-  dev-db:
+  db:
     image: postgres:16
     ports:
       - 5434:5432
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: nest
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
     networks:
       - mangdiman
-  # test-db:
-  #   image: postgres:16
-  #   ports:
-  #     - 5435:5432
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: 123
-  #     POSTGRES_DB: nest
-  #   networks:
-  #     - mangdiman
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+      - /app/node_modules
+    ports:
+      - 3000:3000
+    depends_on:
+      - db
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL
+      - JWT_SECRET
+      - PORT
+      - ACCESS_KEY_ID
+      - SECRET_ACCESS_KEY
+      - ENDPOINT
+      - TOKEN_VALUE
+      - BASE_URL
+    command: sh -c "yarn prisma:dev:deploy && yarn seed && yarn tailwind:dev & yarn start:dev"
+
 networks:
   mangdiman:
