chore: Update environment variables in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,22 @@
-JWT_SECRET="tarangtangtang"
-PORT=3000
+# Description: Environment variables for the application
 
-ADMIN_ID="iniAdminBos"
+JWT_SECRET="tarangtangtang" # secret key for JWT / Can be any string
+PORT=3000 # Port for the server
 
-#R2
+ADMIN_ID="iniAdminBos"  # Admin ID / Can be any string
+
+#R2 Cloudflare Storage
 ACCESS_KEY_ID=""
 SECRET_ACCESS_KEY=""
 ENDPOINT="https://hahah.r2.cloudflarestorage.com"
 TOKEN_VALUE=""
 
+# BASE URL
 BASE_URL="http://localhost:3000"
 
+# Database (Postgres)
 DATABASE_URL=
 DIRECT_URL=
+
+# Redis URL
+REDIS_URL=http://localhost:6379
