chore: Update Redis cache dependencies and versions

--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "@nestjs/swagger": "^7.4.0",
     "argon2": "^0.40.3",
     "cache-manager": "^5.7.6",
-    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "handlebars-layouts": "^3.1.4",
     "hbs": "^4.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "tahap3-labpro": "file:"
