chore: Update admin credentials in .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ JWT_SECRET="tarangtangtang" # secret key for JWT / Can be any string
 PORT=3000 # Port for the server
 
 ADMIN_ID="iniAdminBos"  # Admin ID / Can be any string
+ADMIN_USERNAME="admin" # Admin Username
+ADMIN_PASSWORD="adminGanteng123" # Admin Password
 
 #R2 Cloudflare Storage
 ACCESS_KEY_ID=""
